# brenphuk

./: .gitignore  README.md  asm.out  benchmark.c  benchmark.h  debug.h  dynasm_install.sh  interpreter.c  interpreter.h  interpreter.s  main.c  makefile  meson.build  repl.c  repl.h  tests.c  tests.h
include/: dasm_proto.h  dasm_x86.h  debug.h  error.h  interpreter.h  tests.h
jit/: chunk.s  hello1.cpp  test.c
jit-tests/: base_hello_world.asm  bf_cmds.asm  bf_interpreter_cmds.asm  hello_write_syscall.cpp  iello.cpp  test.asm  test.c
jit-tests/dynasm_test/: dynasm_test.c  dynasm_test.posix64.c  meson.build  minilua
programs/: bitwidth.b  mandlebrot.b  mandlebrot_modified.b
src/: benchmark.c  interpreter.c  interpreter.posix64.c  main.c  repl.c  tests.c
